--- a/themes/metrumy/sass/_mixins-functions.scss
+++ b/themes/metrumy/sass/_mixins-functions.scss
@@ -45,11 +45,11 @@
   @return $v;
 }
 
-@function scale1($n) {
-  @return round(sizer($n) * 1) + px; 
+@function scale($n) {
+  @return round(sizer($n)) + px; 
 }
 
-@function scale2($n) {
+@function scaleM($n) {
   @return round(sizer($n) * 0.9) + px; 
 }
 
@@ -57,7 +57,7 @@
   @media (min-width: $screen-mid) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: scale1(14);
+    grid-column-gap: 3rem;
   }
 }
 
@@ -80,14 +80,5 @@
   
   @media screen and (max-width: $screen-sml) {
     font-size: 13px;
-  }
-}
-
-@mixin standard-margin {
-  margin-top: scale1(14);
-  margin-bottom: scale1(14);
-  @media (max-width: $screen-sml) {
-    margin-top: scale2(14);
-    margin-bottom: scale2(14);
   }
 }
