--- a/themes/metrumy/sass/main.scss
+++ b/themes/metrumy/sass/main.scss
@@ -1,8 +1,8 @@
 @charset "utf-8";
 
 @import
+  "mixins-functions",  // must be first
   "variables",
-  "mixins-functions",
   "base",
   "typography",
   "grid",
@@ -13,7 +13,6 @@
   "topbar",
   "masthead",
   "tooltip",
-  "yesno",
   "home",
   "projects",
   "work",
