--- a/themes/metrumy/layouts/partials/landing.html
+++ b/themes/metrumy/layouts/partials/landing.html
@@ -1,12 +1,31 @@
+<nav id="nav" class="topbar work--topbar">
+
+    <div class="topbar--content">
+        <div class="topbar--unit--logo">  
+        </div>
+
+        <div class="nav-menu"></div>
+            <div class="topbar--unit">
+                <a class="topbar--link topbar--link-current" href="/">
+                    About/Contact
+                </a>
+            </div>
+
+            <div class="topbar--unit">
+                <a class="topbar--link" href="/blog">
+                    Blog
+                </a>
+            </div>
+        </div>
+    </div>
+
+</nav>
 
 <div class="work--masthead">
   <div class="work--masthead--content">
   <h1 class="work--title">
-    Hi, this is how I work.
+    It's about how to not disappear as avarege.  
   </h1>
-  <p class="work--paragraph-big">
-    Using new technologies creatively, yet keeping it simple and snappy.
-  </p>
   </div>
 </div>
 
