--- a/themes/metrumy/sass/_work.scss
+++ b/themes/metrumy/sass/_work.scss
@@ -1,27 +1,41 @@
+.work--topbar {
+//  background-color: $yellow; 
+}
+
 .work--masthead {
-  @include wrapper-big;
+  color: $black;
+  padding-top: 4em;
+  padding-bottom: 6em;
+  margin: 0 auto;
+  @media (max-width: $screen-sml) {
+    padding-top: 3em;
+    padding-bottom: 4em;
+  }
 }
 
 .work--masthead--content {
+  @include wrapper-big;
   font-size: 1rem;
-  max-width: 820px;
-  margin-top: 4em;
-  margin-bottom: 5em;
   padding: 0 1rem;
-
+  text-align: center;
+  max-width: 46rem;
   @media (max-width: $screen-sml) {
     padding: 0 1rem;
-    margin-top: 0;
   }
 }
 
 .work--title {
-  font-size: $xxl;
-  line-height: 1.2;
+  color: $black;
+  font-size: $hero;
+  font-weight: 600;
+  line-height: 1;
+  word-spacing: 0.025em;
+  margin: 0;
   margin-bottom: 0.125em;
   
   @media (max-width: $screen-sml) {
     font-size: $xxlm;
+    line-height: 1.1;
     margin-bottom: 0.25em;
   }
 }
@@ -39,7 +53,7 @@
 .work--body {
   @include wrapper-big;
   @include grid-50-50;
-  padding: 0 1rem;
+  padding: 0 1rem 0;
 
   @media (max-width: $screen-mid) {
     @include wrapper-mid;
@@ -72,19 +86,25 @@
   }
 }
 
+
+.work--myname {
+  @include wrapper-mid;
+  padding: 0 1rem;
+  margin-top: 1em;
+  margin-bottom: 2em;
+}
+
 .work--contact {
   @include wrapper-mid;
   border-left: 0.33rem solid $orange;
   font-size: $xl;
   line-height: 1.1;
-  margin-top: 1em;
-  margin-bottom: 2.5em;
+  margin-bottom: 4rem;
   padding: 0 1rem 0 0.66rem;
 
   @media (max-width: $screen-sml) {
     font-size: $m;
-    margin-top: 1em;
-    margin-bottom: 1.5em;
+
   }
 }
 
@@ -93,14 +113,14 @@
   font-weight: bold;
   @media (max-width: $screen-sml) {
     font-size: $lm;
+    margin-bottom: 0.25em;
   }
-  margin: 0;
 }
 
 .work--contact--addr a {
   font-size: $l;
   @media (max-width: $screen-sml) {
-    font-size: $lm;
+    font-size: $mm;
   }
 }
 
@@ -110,11 +130,5 @@
 
 .work--highlight-2 {
   color: $blue-light;
-}
-
-.work--myname {
-  @include wrapper-mid;
-  padding: 0 1rem;
-  margin-top: 1em;
 }
 
