--- a/themes/metrumy/layouts/partials/landing.html
+++ b/themes/metrumy/layouts/partials/landing.html
@@ -6,15 +6,14 @@
 
         <div class="nav-menu"></div>
             <div class="topbar--unit">
-                <a class="topbar--link topbar--link-current" href="/">
-                    About/Contact
-                </a>
-            </div>
-
-            <div class="topbar--unit">
-                <a class="topbar--link" href="/blog">
+                <a class="topbar--link" href="/">
                     Blog
                 </a>
+            </div>
+            <div class="topbar--unit">
+              <a class="topbar--link topbar--link-current" href="/howiwork">
+                  About/Contact
+              </a>
             </div>
         </div>
     </div>
