--- a/themes/metrumy/layouts/partials/top3.html
+++ b/themes/metrumy/layouts/partials/top3.html
@@ -1,6 +1,7 @@
 <section  class="block">
+  <h3>Top Picks</h3>
+
   <ul class="post-list post-list--short">
-    <div class="list-title">Top 3 Posts</div>
     <li>
     <a href="https://bart747.github.io/ui-coins/">Learning UI Design from Coins (on Contrast)</a>
     </li>
