--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -1,3 +1,27 @@
 {{ partial "head.html" . }}
-{{ partial "landing.html" . }}
+
+<nav id="nav" class="topbar">
+
+    <div class="topbar--content">
+        <div class="topbar--unit--logo">  
+        </div>
+
+        <div class="nav-menu"></div>
+            <div class="topbar--unit">
+                <a class="topbar--link topbar--link-current" href="/">
+                    Blog
+                </a>
+            </div>
+            <div class="topbar--unit">
+                <a class="topbar--link" href="/howiwork">
+                    About/Contact
+                </a>
+            </div>
+        </div>
+    </div>
+
+</nav>
+    
+{{ partial "postList.html" . }}
+
 {{ partial "footer.html" . }}
