--- a/themes/metrumy/layouts/partials/postList.html
+++ b/themes/metrumy/layouts/partials/postList.html
@@ -6,6 +6,9 @@
   {{ partial "topgraphic.html" . }}
 {{end}}
 
+<div class="blog-grid">
+<main class="col-75">
+
 <section class="post-list">
 
   {{ range $paginator.Pages }}
@@ -13,18 +16,15 @@
     <div class="article post-list--post">
       
       {{ if in .Params.categories "shortnote" }}
+
         <div class="article--narrow">
           <h2 class="post-list--note-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
         </div>
-      {{ else }}
-        <div class="article--narrow">
-          <h2 class="post-list--post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-        </div>
-      {{ end }}
-      
-      {{ if in .Params.categories "video" }}
-        {{ range .Params.video }}
-          <div class="wrapper--media-background">
+
+      {{ else if in .Params.categories "video" }}
+
+        <div class="wrapper--media-background">
+          {{ range .Params.video }}  
             <div class="wrapper--media"> 
               <div class="video">
                 <iframe
@@ -32,9 +32,21 @@
                 </iframe>
               </div>
             </div>
-          </div>
-        {{ end }}
+          {{ end }}
+        </div>
+        <div class="article--narrow">
+          <h2 class="post-list--post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+        </div>
+
+      {{ else }}
+
+        <div class="article--narrow">
+          <h2 class="post-list--post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+        </div>
+
       {{ end }}
+
+
       
       <div class="article--narrow">
 
@@ -83,3 +95,10 @@
     </a>
   {{ end }}
 </section>
+
+</main>
+
+<aside class="col-25 blog--aside">
+  {{ partial "top3.html" . }}
+</aside>
+</div>
