--- a/themes/metrumy/layouts/partials/topgraphic.html
+++ b/themes/metrumy/layouts/partials/topgraphic.html
@@ -1,4 +1,6 @@
 <div class="top-animation">
+
+  <a href="/">
   <svg
     id="spaceman-na"
     xmlns:dc="http://purl.org/dc/elements/1.1/"
@@ -182,5 +184,7 @@
       inkscape:connector-curvature="0"
       sodipodi:nodetypes="cccc" />
     </g>
-    </svg>
+  </svg>
+  </a>
+
   </div>
