--- a/themes/metrumy/layouts/partials/topanimation.html
+++ b/themes/metrumy/layouts/partials/topanimation.html
@@ -1,4 +1,6 @@
 <div class="top-animation">
+
+<a href="/"
 <svg
   id="spaceman"
   xmlns:dc="http://purl.org/dc/elements/1.1/"
@@ -183,5 +185,6 @@
       sodipodi:nodetypes="cccc" />
   </g>
 </svg>
- 
+</a> 
+
 </div>
