--- a/themes/metrumy/layouts/partials/topbar.html
+++ b/themes/metrumy/layouts/partials/topbar.html
@@ -7,14 +7,14 @@
         <div class="nav-menu"></div>
             <div class="topbar--unit">
                 <a class="topbar--link" href="/">
-                    Blog
+                    Home
                 </a>
             </div>
-            <div class="topbar--unit">
+        <!--    <div class="topbar--unit">
                 <a class="topbar--link" href="/howiwork">
                     About/Contact
                 </a>
-            </div>
+            </div> -->
         </div>
     </div>
 
