--- a/themes/metrumy/layouts/partials/postList.html
+++ b/themes/metrumy/layouts/partials/postList.html
@@ -99,6 +99,8 @@
 </main>
 
 <aside class="col-25 blog--aside">
-  {{ partial "top3.html" . }}
+  <div class="blog--aside--content">
+  {{ partial "sidepicks.html" . }}
+  </div>
 </aside>
 </div>
