--- a/themes/metrumy/layouts/partials/topbar.html
+++ b/themes/metrumy/layouts/partials/topbar.html
@@ -1,4 +1,4 @@
-<nav id="nav" class="topbar">
+<nav id="nav top" class="topbar">
 
     <div class="topbar--content">
         <div class="topbar--unit--logo">  
