front page redesign

--- a/themes/metrumy/layouts/partials/sidepicks.html
+++ b/themes/metrumy/layouts/partials/sidepicks.html
@@ -19,7 +19,7 @@
 
   <ul class="list--small">
     <li>
-      <a href="/esilient-ui/">5 Notes on How to Design a Resilient UI</a>
+      <a href="/resilient-ui/">5 Notes on How to Design a Resilient UI</a>
     </li>
     <li>
       <a href="/maintainable-ui/">Maintainable UI: How to Improve Code Editing with SASS</a>
