--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -1,5 +1,6 @@
 {{ partial "head.html" . }}
 <div id="top"></div> 
-{{ partial "postList.html" . }}
+{{ partial "blogFront.html" . }}
+
 
 {{ partial "footer.html" . }}
