--- a/themes/metrumy/sass/_lists.scss
+++ b/themes/metrumy/sass/_lists.scss
@@ -24,6 +24,15 @@ li ul {
   margin-left: 0;
 }
 
+.list--archive {
+  list-style: none;
+}
+
+.list--archive li {
+  margin-left: 0;
+  margin-bottom: 0.75em;
+}
+
 .list-title {
   font-weight: bold;
   line-height: 1.25;
@@ -56,7 +65,7 @@ li ul {
 }
 
 .post-list {
-  margin: 2em 0 1em;
+  margin: 2em 0 3em;
 }
 
 .post-list > li {
