--- a/themes/metrumy/sass/_typography.scss
+++ b/themes/metrumy/sass/_typography.scss
@@ -124,7 +124,7 @@ li code {
 }
 
 .article {
-  margin: 2em auto 3em;
+  margin: 0 auto 3em;
 }
 
 .article--narrow {
@@ -160,16 +160,9 @@ li code {
 
 .article-title--video {
   font-size: $l;
-  font-weight: bold;
-  line-height: 1;
-  letter-spacing: -0.01em;
-  margin-top: $l;
-  margin-bottom: $s;
 
   @media (max-width: $screen-sml) {
     font-size: $lm;
-    margin-top: $lm;
-    margin-bottom: $sm;
   }   
 }
 
