--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -1,6 +1,6 @@
 $base-font-family:      "Merriweather", serif;
 $monospace:             "Dejavu Sans Mono", monospace;
-$base-line-height:      1.6;
+$base-line-height:      1.65;
 
 //
 // font sizes in pixels; 'm' ending means 'mobile' (smartphone specific) 
@@ -50,7 +50,7 @@ $yellow-light:        #ffffaa;
 $background-yellow:   #ffee99;
 $orange:              #ff6622;
 $orange-brown:        #cc5500;
-$orange-light:        #ffddaa;
+$orange-light:        #ff7733;
 $orange-deep:         #dd4433;
 $night:               #222255;
 $sand:                #887755;
