create "share quote" widget

--- a/themes/metrumy/layouts/partials/article.html
+++ b/themes/metrumy/layouts/partials/article.html
@@ -1,4 +1,4 @@
-<section class="article">
+<section class="article selectable-article">
 
   {{ if in .Params.categories "video" }} 
       <div class="wrapper--media-background-top">
