--- a/themes/metrumy/layouts/partials/head.html
+++ b/themes/metrumy/layouts/partials/head.html
@@ -1,41 +1,38 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="theme-color" content="#ff6622">
 
-  <!-- HTML Meta Tags -->
   <title>{{ .Title }}</title>
   <meta name="description" content="">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="{{ .Title }}">
   <meta itemprop="description" content="{{ .Summary }}">
-  <meta itemprop="image" content="">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://bart747.github.io">
   <meta property="og:type" content="website">
   <meta property="og:title" content="{{ .Title }}">
   <meta property="og:description" content="{{ .Summary }}">
-  <!--<meta property="og:image" content="">-->
 
   <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="{{ .Title }}">
+  <meta name="twitter:creator" content="@bwhimself">
   <meta name="twitter:description" content="{{ .Summary }}">
-  <!--<meta name="twitter:image" content="">-->
 
   {{ .Hugo.Generator }}
 
   <link rel="canonical" href="{{ .Permalink }}">
   {{ if .RSSLink }}<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
 
-  <!--stylesheets-->
+  <!-- Stylesheets -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/dist/bundle.css?{{ now.Unix }}">
 
