--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -89,6 +89,11 @@ video {
   vertical-align: middle;
 }
 
+.image-in-article-wrapper {
+  margin-left: -1em;
+  margin-right: -1em;
+}
+
 nav {
   margin: 0;
   padding: 0.5em 0.5em 0.25em;
