--- a/themes/metrumy/layouts/partials/blogFront.html
+++ b/themes/metrumy/layouts/partials/blogFront.html
@@ -18,7 +18,8 @@
           </div>
 
         {{ else if in .Params.categories "video" }}
-
+          <div class="wrapper--dark">
+          
           <div class="wrapper--media-background">
             <div class="article--narrow">
               <div class="date secondary date--video"> {{ .Date.Format "Jan 2, 2006" }} | {{ .Params.videotime }}</div>
@@ -30,14 +31,16 @@
                   src="{{ .Params.video }}" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen>
                 </iframe>
               </div>
-            </div>
-           
+            </div>           
           </div>
+
           <div class="article--narrow">
-            <h2 class="post-list--post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+            <h2 class="post-list--post-title post-list--post-title--video"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
             {{ if .Params.subtitle }}
-              <h3 class="post-list--post-subtitle">{{ .Params.subtitle }}</h3>
+              <h3 class="post-list--post-subtitle post-list--post-subtitle--video">{{ .Params.subtitle }}</h3>
             {{ end }}
+          </div>
+
           </div>
 
         {{ else }}
@@ -66,7 +69,7 @@
       <h3>Archive:</h3>
       <ul id="archive" class="list--archive">
         {{ range after 10 (where .Data.Pages "Section" "blog") }}
-        <li class="post-list--post-title--archive"><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+          <li class="post-list--post-title--archive"><a href="{{ .Permalink }}">{{ .Title }}</a></li>
         {{ end }}
       </ul>
     </section>
