minor ui redesign, typography focused

--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -1,6 +1,6 @@
-$base-font-family:      "Merriweather", serif;
+$base-font-family:      "IBM Plex Sans", serif;
 $monospace:             "Dejavu Sans Mono", monospace;
-$base-line-height:      1.65;
+$base-line-height:      1.5;
 
 //
 // font sizes in pixels; 'm' ending means 'mobile' (smartphone specific) 
@@ -51,9 +51,9 @@ $background-yellow:   #ffee99;
 $orange:              #ff6622;
 $orange-brown:        #cc5500;
 $orange-light:        #ff7733;
-$orange-deep:         #dd4433;
+$orange-deep:         #dd4422;
 $night:               #222255;
-$sand:                #887755;
+$sand:                #998877;
 
 // sceen sizes
 $screen-big:            1024px;
