--- a/themes/metrumy/layouts/partials/head.html
+++ b/themes/metrumy/layouts/partials/head.html
@@ -33,7 +33,7 @@
   {{ if .RSSLink }}<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
 
   <!-- Stylesheets -->
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/dist/bundle.css?{{ now.Unix }}">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
