--- a/themes/metrumy/sass/_lists.scss
+++ b/themes/metrumy/sass/_lists.scss
@@ -21,6 +21,8 @@ li ul {
 }
 
 .list--small li {
+  line-height: 1.3;
+  margin-bottom: 0.5em;
   margin-left: 0;
 }
 
@@ -139,7 +141,7 @@ h3.post-list--post-title {
   font-weight: bold;
   font-size: $l;
   font-weight: bold;
-  line-height: 1.33;
+  line-height: 1.25;
   color: $black;
   margin-top: 0;
   margin-bottom: 0;
