clean up dependencies, minor UI edits

--- a/themes/metrumy/layouts/_default/offlinePage.html
+++ b/themes/metrumy/layouts/_default/offlinePage.html
@@ -24,7 +24,7 @@
 <body>
 <div id="allwrapper">
 
-{{ partial "topbar.html" . }}
+{{ partial "logo.html" . }}
 
 
 <div class="article article--narrow">
