--- a/themes/metrumy/layouts/_default/page.html
+++ b/themes/metrumy/layouts/_default/page.html
@@ -1,6 +1,6 @@
 {{ partial "head.html" . }}
 
-{{ partial "topbar.html" . }}
+{{ partial "logo.html" . }}
 
 
 <div class="article article--narrow">
