--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -235,50 +235,30 @@ button,
   color: $orange;
 }
 
+.logo {
+  background-color: #000;
+  color: $background-color;
+  font-size: $s;
+  font-weight: bold;
+  letter-spacing: -0.1px;
+  text-align: center;  
+  margin: 0;
+  padding: 0.5em 0.75em;
+  height: 2.5em;
+  width: 14em;
+}
+
+.logo:hover {
+  background-color: $orange-deep;
+}
+
+a.logo--link {
+  text-decoration: none;
+}
+
 .footer--top {
   text-align: center;
   margin: 1em;
-}
-
-.top-animation {
-  text-align: center;
-  margin: 1em auto 0;
-  @media (max-width: $screen-sml) {
-    margin: 1em auto;
-  }
-}
-
-.top-animation a {
-  border: none;
-}
-
-#spaceman {
-  position: relative;
-  animation-duration: 1.5s;
-  animation-name: float;
-  animation-iteration-count: 3;
-  animation-timing-function: cubic-bezier(0.5, 0.2, 0.5, 1);
-  text-align: center;
-}
-
-#flame1 {
-  position: relative;
-  animation-duration: 0.5s;
-  animation-name: flame;
-  animation-iteration-count: 8;
-  animation-timing-function: ease-in-out;
-}
-
-@keyframes float {
-  45% {
-    transform: translateY(-3px);
-  }
-}
-
-@keyframes flame {
-  50% {
-    opacity: 0.3;
-  }
 }
 
 .archive {
