change name in 'logo' (top)

--- a/themes/metrumy/layouts/partials/logo.html
+++ b/themes/metrumy/layouts/partials/logo.html
@@ -1,5 +1,5 @@
     <a class="logo--link" href="/">
         <div class="logo">
-            UI Developement Musings
+            Software Musings
         </div>
     </a>
