change name in 'logo'

--- a/themes/metrumy/layouts/partials/logo.html
+++ b/themes/metrumy/layouts/partials/logo.html
@@ -1,5 +1,5 @@
     <a class="logo--link" href="/">
         <div class="logo">
-            Software Musings
+            Mad Software Musings 
         </div>
     </a>
